maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:38: error: ambiguous reference to overloaded definition,
both method aMurOuest in class JediEscaper of type (x: Int, y: Int)Boolean
and  method aMurOuest in class JediEscaper of type (x: Int, y: Int)Boolean
match argument types (Int,Int)
    if ( !aMurOuest(x,y) ){
          ^JediEscaper:52: error: not found: value aMurEst
    if ( !aMurEst(x,y) ){
          ^JediEscaper:82: error: method aMurOuest is defined twice
  conflicting symbols both originated in file 'plm.runtime1.JediEscaper'
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
            ^